--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit_add.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit_add.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <#input id="pay" name="支出 underline="true""/>
+                    <#input id="pay" name="支出" underline="true"/>
                     <#input id="data" name="日期" underline="true" type="date"
                             clickFun="laydate({istime: false, format: 'YYYY-MM-DD'})"/>
                 </div>
