--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/order/order/order.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/order/order/order.html
@@ -13,6 +13,9 @@
                                 <#NameCon id="condition" name="名称" />
                             </div>
                             <div class="col-sm-3">
+                                <#NameCon id="channel" name="渠道名称" />
+                            </div>
+                            <div class="col-sm-3">
                                 <#TimeCon id="begin" name="开始时间" isTime="false" pattern="YYYY-MM-DD" />
                             </div>
                             <div class="col-sm-3">
