--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/order/order/order_edit.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/order/order/order_edit.html
@@ -22,12 +22,12 @@
                 </div>
 
                 <div class="col-sm-6">
+                    <#input id="channel" name="渠道" value="${item.channel}" underline="true"/>
                     <#input id="channelMoney" name="渠道金额" value="${item.channelMoney}" underline="true"/>
                     <#input id="profit" name="利润" value="${item.profit}" underline="true"/>
                     <#input id="realIncome" name="实际收入" value="${item.realIncome}" underline="true"/>
                     <#input id="realOrder" name="实际量级" value="${item.realOrder}" underline="true"/>
                     <#input id="realProfit" name="实际利润" value="${item.realProfit}" underline="true"/>
-                    <#input id="statistic" name="我方统计" value="${item.statistic}" underline="true"/>
                     <!--<#input id="createTime" name="创建时间" value="${item.createTime}" underline="true"/>-->
                     <!--<#input id="updateTime" name="更新时间" value="${item.updateTime}" />-->
                 </div>
