--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit.html
@@ -23,6 +23,9 @@
                             </div>
                         </div>
                         <div class="hidden-xs" id="BankDepositTableToolbar" role="group">
+                            @if(shiro.hasPermission("/bankDeposit/add")){
+                            <#button name="添加" icon="fa-plus" clickFun="BankDeposit.openAddBankDeposit()"/>
+                            @}
                             @if(shiro.hasPermission("/bankDeposit/delete")){
                             <#button name="删除" icon="fa-remove" clickFun="BankDeposit.delete()" space="true"/>
                             @}
