--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/order/order/order_add.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/order/order/order_add.html
@@ -21,12 +21,12 @@
                 </div>
 
                 <div class="col-sm-6">
+                    <#input id="channel" name="渠道" underline="true"/>
                     <#input id="channelMoney" name="渠道金额" underline="true"/>
                     <#input id="profit" name="利润" underline="true"/>
                     <#input id="realIncome" name="实际收入" underline="true"/>
                     <#input id="realOrder" name="实际量级" underline="true"/>
                     <#input id="realProfit" name="实际利润" underline="true"/>
-                    <#input id="statistic" name="我方统计" underline="true"/>
                     <!--<#input id="createTime" name="创建时间" underline="true"/>-->
                     <!--<#input id="updateTime" name="更新时间" underline="true"/>-->
                 </div>
