--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit.html
@@ -29,6 +29,9 @@
                             @if(shiro.hasPermission("/bankDeposit/delete")){
                             <#button name="删除" icon="fa-remove" clickFun="BankDeposit.delete()" space="true"/>
                             @}
+                            @if(shiro.hasPermission("/bankDeposit/export")){
+                            <#button name="导出" icon="fa-download" clickFun="BankDeposit.export()" space="true"/>
+                            @}
                         </div>
                         <#table id="BankDepositTable"/>
                     </div>
