客户模块加上预付金额跟消耗金额

--- a/guns/guns-admin/src/main/resources/templates/customerImport.xml
+++ b/guns/guns-admin/src/main/resources/templates/customerImport.xml
@@ -8,7 +8,9 @@
             <section startRow="1" endRow="1">
                 <mapping row="1" col="0">customer.name</mapping>
                 <mapping row="1" col="1">customer.phone</mapping>
-                <mapping row="1" col="2">customer.balance</mapping>
+                <mapping row="1" col="2">customer.charge</mapping>
+                <mapping row="1" col="3">customer.cost</mapping>
+                <mapping row="1" col="4">customer.balance</mapping>
             </section>
             <loopbreakcondition>
                 <rowcheck offset="0">
