--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/bank/bank/bank_edit.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/bank/bank/bank_edit.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <#input id="pay" name="支出" value="${item.pay}" />
+                    <#input id="pay" name="支出" value="${item.pay}" underline="true"/>
                     <#input id="balance" name="余额" value="${item.balance}" underline="true"/>
                 </div>
             </div>
