提交客户增加三个字段

--- a/guns/guns-admin/src/main/resources/templates/customerImport.xml
+++ b/guns/guns-admin/src/main/resources/templates/customerImport.xml
@@ -8,9 +8,12 @@
             <section startRow="1" endRow="1">
                 <mapping row="1" col="0">customer.name</mapping>
                 <mapping row="1" col="1">customer.phone</mapping>
-                <mapping row="1" col="2">customer.charge</mapping>
-                <mapping row="1" col="3">customer.cost</mapping>
-                <mapping row="1" col="4">customer.balance</mapping>
+                <mapping row="1" col="2">customer.email</mapping>
+                <mapping row="1" col="3">customer.address</mapping>
+                <mapping row="1" col="4">customer.touchName</mapping>
+                <mapping row="1" col="5">customer.charge</mapping>
+                <mapping row="1" col="6">customer.cost</mapping>
+                <mapping row="1" col="7">customer.balance</mapping>
             </section>
             <loopbreakcondition>
                 <rowcheck offset="0">
