--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/customer/customer/customer_add.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/customer/customer/customer_add.html
@@ -9,10 +9,13 @@
                 <div class="col-sm-6 b-r">
                     <!--<#input id="id" name="id" underline="true"/>-->
                     <#input id="name" name="客户名称" underline="true"/>
-                    <#input id="phone" name="手机号"/>
+                    <#input id="phone" name="手机号" underline="true"/>
+                    <#input id="email" name="邮箱" type="email" underline="true"/>
                 </div>
 
                 <div class="col-sm-6">
+                    <#input id="address" name="公司地址" underline="true"/>
+                    <#input id="touchName" name="对接人" underline="true"/>
                     <#input id="balance" name="余额" underline="true"/>
                     <!--<#input id="updateTime" name="更新时间" underline="true"/>-->
                     <!--<#input id="createTime" name="创建时间" underline="true"/>-->
