--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/customer/customer/customer_edit.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/customer/customer/customer_edit.html
@@ -7,12 +7,14 @@
 
             <div class="row">
                 <div class="col-sm-6 b-r">
-                    <#input id="id" name="id" value="${item.id}" underline="true" readonly="true"/>
                     <#input id="name" name="客户名称" value="${item.name}" underline="true"/>
-                    <#input id="phone" name="手机号" value="${item.phone}" />
+                    <#input id="phone" name="手机号" value="${item.phone}" underline="true"/>
+                    <#input id="email" name="邮箱" type="email" value="${item.email}" underline="true"/>
                 </div>
 
                 <div class="col-sm-6">
+                    <#input id="address" name="公司地址" value="${item.address}"  underline="true"/>
+                    <#input id="touchName" name="对接人" value="${item.touchName}"  underline="true"/>
                     <#input id="balance" name="余额" value="${item.balance}" underline="true"/>
                     <!--<#input id="updateTime" name="更新时间" value="${item.updateTime}" underline="true"/>-->
                     <!--<#input id="createTime" name="创建时间" value="${item.createTime}" />-->
