添加字段 客户名称下拉框

--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit_add.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit_add.html
@@ -21,6 +21,8 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <#input id="income" name="收入" underline="true"/>
+                    <div class="hr-line-dashed"></div>
+                    <#input id="description" name="明细" underline="true"/>
                 </div>
 
                 <div class="col-sm-6">
