--- a/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit_edit.html
+++ b/guns/guns-admin/src/main/webapp/WEB-INF/view/bankDeposit/bankDeposit/bankDeposit_edit.html
@@ -9,6 +9,8 @@
                 <div class="col-sm-6 b-r">
                     <#input id="bankNo" name="银行卡" value="${item.bankNo}" underline="true"/>
                     <#input id="income" name="收入" value="${item.income}" underline="true"/>
+                    <div class="hr-line-dashed"></div>
+                    <#input id="description" name="明细" underline="true"/>
                 </div>
 
                 <div class="col-sm-6">
